# hologram-apps

./: .gitignore  .gitleaks.toml  .gitleaksignore  README.md
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: native-release.yml  security.yml
apps/: index.jsonld
apps/86dos/: holospace.json  holospace.lock.json  index.html  kappa.json  sw.js
apps/9front-boot/: holospace.json  holospace.lock.json  index.html  kappa.json  sw.js
apps/9legacy/: holospace.json  holospace.lock.json  index.html  kappa.json  sw.js
apps/amp/: holospace.json  index.html
apps/android/: holospace.json  holospace.lock.json  index.html  kappa.json  sw.js
apps/android4/: holospace.json  holospace.lock.json  index.html  kappa.json  sw.js
apps/archlinux-boot/: holospace.json  holospace.lock.json  index.html  kappa.json  sw.js
apps/ascii/: holospace.json  index.html
apps/asuro/: holospace.json  holospace.lock.json  index.html  kappa.json  sw.js
apps/atlas/: holospace.json  index.html
apps/atlas96/: atlas-12288.uor.jsonld  holospace.json  index.html  resonator-detail.js  resonator-geometry.js  resonator-gpu.js  resonator-spectrum.js  resonator.html  resonator.receipt.jsonld  showcase.html
apps/basiclinux/: holospace.json  holospace.lock.json  index.html  kappa.json  sw.js
apps/beos/: holospace.json  holospace.lock.json  index.html  kappa.json  sw.js
apps/bleskos/: holospace.json  holospace.lock.json  index.html  kappa.json  sw.js
apps/bluejay/: holospace.json  holospace.lock.json  index.html  kappa.json  sw.js
apps/boneos/: holospace.json  holospace.lock.json  index.html  kappa.json  sw.js
apps/book/: agent-card.json  agent-facts.json  holo-guide.js  holospace.json  index.html  register.json  skill.md
apps/boot-prompt/: holospace.json  index.html  prompt.txt
apps/bootbasic/: holospace.json  holospace.lock.json  index.html  kappa.json  sw.js
apps/bootchess/: holospace.json  holospace.lock.json  index.html  kappa.json  sw.js
apps/bootlogo/: holospace.json  holospace.lock.json  index.html  kappa.json  sw.js
apps/bootos/: holospace.json  holospace.lock.json  index.html  kappa.json  sw.js
apps/bootrogue/: holospace.json  holospace.lock.json  index.html  kappa.json  sw.js
apps/brcminer/: brc-worker.js  holospace.json  index.html
apps/browser/: holo-install.js  holospace.json  index.html
apps/btc/: btc-worker.js  holospace.json  index.html
apps/buildroot/: holospace.json  holospace.lock.json  index.html  kappa.json
apps/buildroot6/: holospace.json  holospace.lock.json  index.html  kappa.json
apps/capture/: capture-worker.js  holo-capture.js  holospace.json  index.html
apps/catk/: holospace.json  holospace.lock.json  index.html  kappa.json  sw.js
apps/chimaeraos/: holo-splash.js  holospace.json  holospace.lock.json  index.html  kappa.json  sw.js
apps/chip4504/: holospace.json  holospace.lock.json  index.html  kappa.json  sw.js
apps/cloud/: holo-broker-sync.mjs  holospace.json  index.html
apps/code/: DECISION.md  README.md  holo-code-agent.mjs  holo-code-providers.mjs  holo-code-repl.js  holo-code-tools.mjs  holospace.json  index.html
apps/code-desktop/: holo-code-desktop.js  holospace.json  holospace.lock.json  index.html
apps/control/: holospace.json  index.html  script.js
apps/cosmos/: holospace.json  index.html
apps/curios/: holospace.json  holospace.lock.json  (+3 more)
apps/tauri/cef-host/: .gitignore  CMakeLists.txt  README.md  _build-popup-ext.mjs  _cdp-capture-real.ps1  _cdp-click-capture.ps1  _cdp-eme-probe.ps1  _cdp-eval.ps1  _cdp-media-probe.ps1  _cdp-media-resolver-test.ps1  _cdp-medianet.ps1  _cdp-mothertest.ps1  _cdp-p6-capture.ps1  _cdp-p6.ps1  _cdp-relay-test.ps1  _cdp-sandbox-check.ps1  _cdp-sc-lw.ps1  _cdp-sc-net.ps1  _cdp-sc-test.ps1  _cdp-verify.ps1  _probe.js  _probe2.js  _speed-harness.ps1  _verify-bookmarks.ps1  _verify-chrome-visible.ps1  _verify-extaction.ps1  _verify-kappa-read.ps1  _verify-live-bookmarks.ps1  _verify-p15-e2e.ps1  _verify-popup-rail.ps1  _verify-popup.ps1  _verify-reseal.ps1  build.ps1  holo-adblock-hosts.txt  holo-cosmetics.txt  holo-lifecycle-strand.jsonl  holo.rc  measure-canvas.ps1  probe-canvas.ps1  prove-boot.ps1  (+5 more)
apps/tauri/cef-host/holo-toolbar-ext/: bg.js  bookmarks.json  manifest.json  popup.html  popup.js
apps/tauri/cef-host/include/: kappa_route.h
apps/tauri/cef-host/src/: app.cc  app.h  broker_server.cc  broker_server.h  closure_anchor.h  devtools_bundle.h  handler.cc  handler.h  holo_media.cc  holo_media.h  holo_osr.cc  holo_osr.h  holo_sc.cc  holo_sc.h  hot_store.cc  hot_store.h  kappa_scheme.cc  kappa_scheme.h  main.cc  mesh_supervisor.cc  mesh_supervisor.h  messenger_capture_bundle.h  playground_bundle.h  sha256.h  window.cc  window.h
apps/tauri/cef-host/test-ext-popup/: cs.js  manifest.json  popup.html
apps/tauri/cef-host/test-extension/: c.js  manifest.json
apps/tauri/cef-host/tools/: cdp-anchor.mjs  cdp-latency.mjs  cdp-proof.mjs  cdp-shell.mjs  gen-devtools-bundle.mjs  gen-playground-bundle.mjs  holo-dt-bundle.gen.js  holo-host-lifecycle-bootproof.mjs  holo-pg-bundle.gen.js  patch-exe-resources.ps1
apps/tauri/chromium-kappa/ungoogled/: README.md  build-kappa-ungoogled.sh  holo-flags.gn  holo_kappa_overlay.py  verify-widevine.py
apps/tauri/chromium-kappa/ungoogled/branding/: apply_branding.py
apps/tauri/chromium-kappa/ungoogled/ci/: build.yml
apps/tauri/chromium-kappa/ungoogled/src/chrome/browser/holo/: BUILD.gn  holo_url_loader_factory.cc  holo_url_loader_factory.h
apps/tauri/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/tauri/src-tauri/capabilities/: default.json
apps/tauri/src-tauri/icons/: README.md
apps/tauri/src-tauri/kappa-route/: Cargo.toml
apps/tauri/src-tauri/kappa-route/examples/: boot_timing.rs  fabric_bench.rs  prove_bao_stream.rs  prove_dist.rs
apps/tauri/src-tauri/kappa-route/src/: bao.rs  did.rs  ffi.rs  lib.rs  meshget.rs  meshsync.rs  semantic.rs  sharedcache.rs  webcache.rs
apps/tauri/src-tauri/src/: lib.rs  main.rs
(+1860 files in other folders)
