# kappa-route — the engine-agnostic κ-route verification core.
# Pure Rust, NO webview/Tauri linkage: resolve a flat OS path against a dual-axis sealed closure and
# return verified bytes, or refuse (Law L5 / SEC-1 / SEC-6). The native host (Tauri today, CEF next)
# wraps this in its scheme handler — so the same audited verifier serves every engine, and its witness
# runs without a GUI.
[package]
name = "kappa-route"
version = "0.1.0"
edition = "2021"
license = "MIT"

# rlib   → the Tauri host depends on it as a normal Rust crate
# staticlib/cdylib → the CEF host (C++) links the C ABI (ffi.rs / kappa_route.h)
[lib]
crate-type = ["rlib", "staticlib", "cdylib"]

[dependencies]
sha2 = "0.10"
# `rayon` lights up BLAKE3's multi-core SIMD path (Hasher::update_rayon) — the bare-metal throughput that
# decides whether κ-streaming verify keeps up with an InfiniBand line rate (kappa-fabric goodput proof).
blake3 = { version = "1", features = ["rayon"] }
# data-parallel chunk verification — the bare-metal path that lifts streaming verify from ~0.3 GB/s
# (1 core) toward the multi-core BLAKE3 ceiling, so the cold stream is wire-bound, never verify-bound.
rayon = "1"
serde_json = "1"
